// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application component should render alert if user is not fez author 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Please contact the UQ eSpace administrator to resolve this."
          showLoader={false}
          title="You are not registered in UQ eSpace as an author"
          type="info_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_11"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_14"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_15"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_16"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for HDR with ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_11"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_14"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_15"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_16"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for HDR without ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "pageTitle": "Link ORCID ID to UQ eSpace",
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Before you can start using UQ eSpace you have to link your UQ eSpace profile to your ORCID ID."
          showLoader={false}
          title="ORCID ID REQUIRED"
          type="error_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_1"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_2"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_3"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        key="route_4"
        pageTitle="Link ORCID ID to UQ eSpace"
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author with ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_11"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_14"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_15"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_16"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author without ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          action={[Function]}
          actionButtonLabel="Click here to link or register"
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="You do not have an ORCID ID linked to your UQ eSpace."
          showLoader={false}
          title="ORCID ID REQUIRED"
          type="warning"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_11"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_14"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_15"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_16"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author without ORCID ID should not display ORCID warning on thesis submission page 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={false}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_8"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_11"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_14"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_15"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_16"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render application with routing for the user and display loading screen while loading author 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing data collection",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <div
      className="isLoading is-centered"
    >
      <InlineLoader
        message="Loading user account..."
      />
    </div>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render for anon user 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/dashboard",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={false}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText=""
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={true}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/my_research_claimed.php",
          "primaryText": "Switch to old interface",
          "public": true,
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <div
      className="layout-fill dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          action={[Function]}
          actionButtonLabel="Click to login"
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Login to UQ eSpace for full search results and more services."
          showLoader={false}
          title="You are not logged in"
          type="info_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_1"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_3"
        pageTitle="eSpace"
        path="/dashboard"
      />
      <Route
        key="route_4"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render loading screen while account is loading 1`] = `
<div
  className="layout-fill"
>
  <AppLoader
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="University of Queensland"
    progressColor="#FFF"
    title="UQ eSpace "
  />
</div>
`;

exports[`Application component should render thesis submission for HDR without menu 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/records/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/records/(UQ:[a-z0-9]+)",
        },
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "pageTitle": "Link ORCID ID to UQ eSpace",
        },
      ]
    }
  />
  <AppBar
    className="AppBar align-center"
    iconElementLeft={
      <IconButton
        className="main-menu-button"
        disableTouchRipple={false}
        disabled={false}
        hoveredStyle={
          Object {
            "backgroundColor": "rgba(0,0,0,0.3)",
            "borderRadius": "50%",
          }
        }
        iconStyle={Object {}}
        tabIndex={1}
        tooltip="Main navigation"
        tooltipPosition="bottom-right"
        touch={false}
      >
        <NavigationMenu />
      </IconButton>
    }
    iconElementRight={
      <div
        className="columns is-gapless appbar-right-columns is-mobile"
      >
        <div
          className="column search-column"
        />
        <div
          className="column is-narrow auth-button-column"
        >
          <AuthButton
            hoveredStyle={
              Object {
                "backgroundColor": "rgba(0,0,0,0.3)",
                "borderRadius": "50%",
              }
            }
            isAuthorizedUser={true}
            onClick={[Function]}
            signInTooltipText="Log in"
            signOutTooltipText="Log out - undefined"
          />
        </div>
      </div>
    }
    iconStyleLeft={
      Object {
        "marginTop": 0,
      }
    }
    onLeftIconButtonClick={[Function]}
    showMenuIconButton={false}
    style={
      Object {
        "height": 75,
      }
    }
    title="UQ eSpace "
    titleStyle={Object {}}
    zDepth={1}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_1"
        path="/records/:pid(UQ:[a-z0-9]+)"
        regExPath="/records/(UQ:[a-z0-9]+)"
      />
      <Route
        key="route_2"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_3"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        key="route_4"
        pageTitle="Link ORCID ID to UQ eSpace"
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;
